Retrait de la forme carrée vers le haut + fix z-index

--- a/StockGame/wwwroot/css/2021.css
+++ b/StockGame/wwwroot/css/2021.css
@@ -458,6 +458,8 @@ body {
   height: 100%;
 }
 .wrapAll.loginBody .oldContent {
+  position: relative;
+  z-index: 2;
   height: 100%;
 }
 .wrapAll.loginBody + footer {
@@ -476,6 +478,7 @@ body {
   transform: rotate(25deg);
   outline: 6px solid #172A3A;
   outline-offset: 1rem;
+  z-index: 1;
 }
 .wrapAll.loginBody:after {
   content: "";
@@ -1724,14 +1727,13 @@ section .actions a {
   }
 }
 @media screen and (max-width: 1280px) {
-  html {
-    min-width: 1280px;
-  }
-
   .dashboard .newsfeed .slide .right {
     max-width: 300px;
   }
 
+  .wrapAll.loginBody {
+    box-sizing: border-box;
+  }
   .wrapAll.loginBody:before {
     top: -51.25rem;
     left: -25rem;
@@ -1788,7 +1790,7 @@ section .actions a {
   }
 
   .wrapAll.loginBody:before {
-    top: -51.25rem;
+    top: -57.5rem;
     left: -36.25rem;
   }
   .wrapAll.loginBody:after {
